# KDAC

Hardware/: Errata-revA.md  dac.cmp  dac.dcm  dac.kicad_pcb  dac.lib  dac.net  dac.pro  power.cmp  power.kicad_pcb  power.net  power.pro
Hardware/Output/: dac.gbl  dac.gbo  dac.gbs  dac.gko  dac.gtl  dac.gto  dac.gts  dac.txt
Hardware/dac.pretty/: CD43.kicad_mod  DB10xS.kicad_mod  DM3D-SF.kicad_mod  OSHW.kicad_mod  RCA.kicad_mod  SOIC-20_7.5x12.8mm_Pitch1.27mm.kicad_mod  TORX147PL.kicad_mod  TTP-15.kicad_mod  XO.kicad_mod
Software/: CMakeLists.txt  KDAC.chcfg  board.c  board.h  board_SSD1306.h  chconf.h  cs8416.c  cs8416.h  drivers.h  gfxconf.h  halconf.h  main.c  mcuconf.h  pcm1792a.c  pcm1792a.h  system.c  system.h  usb_audio.c  usb_audio.h  usbcfg.c  userfonts.h
Software/fonts/: terminus_12.c  terminus_14.c
Software/gui/: combobox.c  combobox.h  gui.c  gui.h  label.c  label.h  manager.c  manager.h  menu.c  menu.h  spinbox.c  spinbox.h  widget.h
