PROJECT(kdac)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
ENABLE_LANGUAGE(ASM)

FIND_PACKAGE(ChibiOS COMPONENTS rt hal pal usb gpt i2c i2s serial serial_usb spi mmc_spi shell chprintf memstreams REQUIRED)
FIND_PACKAGE(uGFX COMPONENTS gos_chibios gdisp gdisp_fonts driver_SSD1306 REQUIRED)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}    
    ${ChibiOS_INCLUDE_DIRS}
    ${uGFX_INCLUDE_DIRS}
)

SET(PROJECT_SOURCES
    main.c
    board.c
    usbcfg.c
    
    system.c

    gui/manager.c
    gui/widget.c
    gui/menu.c
    gui/label.c
    gui/spinbox.c
    gui/gui.c
)

ADD_DEFINITIONS(-DCORTEX_USE_FPU=TRUE)
ADD_DEFINITIONS(-DUSE_FPU=TRUE)
ADD_DEFINITIONS(-DCH_USE_REGISTRY=TRUE)
ADD_DEFINITIONS(-DCHPRINTF_USE_FLOAT=TRUE)

SET(STM32_LINKER_SCRIPT ${ChibiOS_LINKER_SCRIPT})
ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${PROJECT_SOURCES} ${ChibiOS_SOURCES} ${uGFX_SOURCES})
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} m)

STM32_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME})
STM32_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME})
